--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ composeNavigation = "2.8.0-beta05"
 coil = "2.6.0"
 androidxLifecycle = "2.8.3"
 exoplayer = "1.3.1"
+cloudy = "0.2.0"
+
 
 
 
@@ -57,6 +59,7 @@ androidx-lifecycle-viewModelSavedState = { group = "androidx.lifecycle", name = 
 androidx-lifecycle-lifecycleCompiler = { group = "androidx.lifecycle", name = "lifecycle-compiler", version.ref = "androidxLifecycle" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+compose-cloudy = { module = "com.github.skydoves:cloudy", version.ref = "cloudy" }
 
 
 [plugins]
