--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,12 +10,12 @@ activity-compose = "1.9.0"
 compose-bom = "2023.08.00"
 androidxHiltNavigationCompose = "1.2.0"
 kotlinxCoroutines = "1.8.0"
-composeNavigation = "2.8.0-beta05"
+composeNavigation = "2.8.0-rc01"
 coil = "2.6.0"
 androidxLifecycle = "2.8.3"
 exoplayer = "1.3.1"
 cloudy = "0.2.0"
-
+serialization = "1.6.0"
 
 
 
@@ -60,6 +60,8 @@ androidx-lifecycle-lifecycleCompiler = { group = "androidx.lifecycle", name = "l
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 compose-cloudy = { module = "com.github.skydoves:cloudy", version.ref = "cloudy" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
+
 
 
 [plugins]
@@ -68,6 +70,7 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 
 
